# QmlNativeWebView

./: CMakeLists.txt  NativeWebView.qml  QmlNativeWebView.qml  customwebview.h  customwebview_mac.mm  customwebview_win.cpp
examples/: CMakeLists.txt  Main.qml  main.cpp
